# Airplay-Album-Art

./: README.md  design.md
firmware/: .gitignore  platformio.ini
firmware/include/: canvas.h  output.h  secrets.h.example
firmware/src/: audio_analyzer.cpp  audio_analyzer.h  hub75_output.cpp  hub75_output.h  main.cpp  mode_button.cpp  mode_button.h  tft_preview_output.cpp  tft_preview_output.h  visualizer.cpp  visualizer.h
service/: README.md  config.example.yaml  pyproject.toml
service/launchd/: com.romeluis.airplay-art.plist
service/src/airplay_art/: art.py  cache.py  config.py  lookup.py  main.py  monitor.py  server.py
